--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,9 @@
   // Live and Live/Five Server settings
   "fiveServer.port": 5501,
   "fiveServer.injectBody": false,
-  "liveServer.settings.port": 5504
+  "liveServer.settings.port": 5504,
+  "cSpell.words": [
+    "Inno",
+    "MURUNGI"
+  ]
 }
